# netbrain

./: .env.example  .gitignore  A2A_CHANGES.md  README.md  __init__.py  agent_memory.py  app.py  app_fastapi.py  atlas_application.py  auth-new.py  auth.py  chat-history-new.py  chat_history.py  chat_service.py  db.py  design.md  docker-compose.yml  graph_builder.py  graph_nodes.py  graph_state.py  kv_helper.py  log_config.json  main.py  mcp_client.py  mcp_client_tool_selection.py  mcp_server.py  netbrainauth.py  panoramaauth.py  pyproject.toml  run_web.py  runbook_executor.py  schema.sql  servicenow_memory_sync.py  splunkauth-new.py  splunkauth.py  status_bus.py  test.py  test_device_detail.py  test_device_types.py  test_device_types_simple.py  (+5 more)
.claude/: settings.json
Documentation/: auth-rbac.md  chat-history-security.md  fastapi-overview.md  langchain-usage.md  llm-role-and-resilience.md  mcp-langchain-integration.md  panorama-query-end-to-end-flow.md  query-end-to-end-flow.md
agents/: agent_factory.py  agent_loop.py  agent_registry.py  agent_team.py  db_agent.py  netbox_agent.py  netbrain_agent.py  network_ops_agent.py  nornir_agent.py  orchestrator.py  panorama_agent.py  servicenow_agent.py  servicenow_memory_sync.py  splunk_agent.py  troubleshoot_agent.py  troubleshoot_orchestrator.py  vendor_lookup_agent.py
application/: __init__.py  atlas_application.py  chat_service.py
config/: log_config.json
frontend/: frontend.md  index.html  package-lock.json  package.json  vite.config.js
graph/: __init__.py  graph_builder.py  graph_nodes.py  graph_state.py
icons/: README.md
integrations/: __init__.py  mcp_client.py  servicenowauth.py
memory/: __init__.py  agent_memory.py  servicenow_memory_sync.py
nornir/: config.yaml  server.py  tasks.py
persistence/: __init__.py  chat_history.py  db.py
runbooks/: connectivity.md  connectivity.yaml  device_health.md  device_health.yaml  interface.md  intermittent.yaml  ospf.md  path_change.yaml  performance.yaml
scripts/: collect_devices.py  generate_panorama_test_data.py  seed_incidents.py
security/: __init__.py  auth.py
services/: __init__.py  agent_scenario_service.py  backend_contracts.py  checkpointer_runtime.py  connectivity_snapshot_service.py  device_diagnostics_service.py  diagnostics_service.py  graph_invoker.py  graph_payloads.py  graph_runtime.py  health_service.py  intent_routing_service.py  memory_manager.py  metrics.py  network_ops_scenario_service.py  network_ops_workflow_service.py  nornir_client.py  observability.py  path_trace_service.py  pending_approval.py  pending_context.py  request_preprocessor.py  response_presenter.py  routing_diagnostics_service.py  runtime_helpers.py  servicenow_search_service.py  session_store.py  status_service.py  troubleshoot_scenario_service.py  troubleshoot_workflow_service.py  workflow_registry.py  workflow_state_service.py
(+181 files in other folders)
