[project]
name = "atlas"
version = "0.1.0"
description = "Atlas - AI-powered network infrastructure assistant with MCP, NetBrain API, Panorama, and Splunk integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # MCP (Model Context Protocol) dependencies
    "mcp>=1.0.0",
    "fastmcp>=0.9.0",
    # LLM/Ollama dependencies
    "ollama>=0.1.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-ollama>=0.1.0",
    # Web framework (FastAPI only; Streamlit UI removed)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    # HTTP clients
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    # Data processing
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    # Visualization
    "matplotlib>=3.7.0",
    "networkx>=3.1",
    # JSON processing
    "jsonpatch>=1.32",
    # Authentication (OIDC + sessions)
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.7",
    # Azure Key Vault — load secrets when not in env
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
    # Optional: encrypt chat history at rest
    "cryptography>=42.0.0",
    "langchain-openai>=1.1.10",
]
